fix: use inter variable as font to fix font on mobile

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -68,7 +68,7 @@
 @layer base {
 
   html {
-    font-family: "Inter", system-ui, sans-serif;
+    font-family: Inter Variable, system-ui, sans-serif;
   }
 
   * {
